
[package]
name = "parsehttp"
version = "0.1.0"
edition = "2021"

[lib]
name = "parsehttp"
path = "src/lib.rs"

[dependencies]
url = "2.5.7"
bon = "3.9.1"
serde = { version = "1", optional = true, features = ["derive"] }
serde_json = { version = "1", optional = true }

[dev-dependencies]
"pretty_assertions" = "1"
rstest = "0.26.1"

[features]
default = []
json = ["dep:serde", "dep:serde_json"]

[[example]]
name = "request_to_json"
required-features = ["json"]

[[example]]
name = "response_to_json"
required-features = ["json"]
